# bib-sdk

./: .gitignore  Cargo.toml  pyproject.toml
.github/workflows/: lint-test-build.yml  publish.yml
docs/: generic-style-guide.md  python-style-guide.md
philoch_bib_sdk/adapters/api/: __init__.py
philoch_bib_sdk/adapters/io/: __init__.py
philoch_bib_sdk/adapters/io/csv/: __init__.py
philoch_bib_sdk/adapters/io/ods/: __init__.py
philoch_bib_sdk/adapters/tabular_data/: read_journal_volume_number_index.py
philoch_bib_sdk/converters/api/: __init__.py
philoch_bib_sdk/converters/plaintext/author/: formatter.py  parser.py
philoch_bib_sdk/converters/plaintext/bibitem/: bibkey_formatter.py  bibkey_parser.py  date_formatter.py  date_parser.py  formatter.py  pages_formatter.py  parser.py
philoch_bib_sdk/converters/plaintext/journal/: formatter.py
philoch_bib_sdk/converters/plaintext/shared/: renderable_formatter.py
philoch_bib_sdk/interfaces/cli/: fuzzy_matching.py
philoch_bib_sdk/logic/: __init__.py  default_models.py  models.py  models_staging.py
philoch_bib_sdk/logic/functions/: __init__.py  comparator.py  fuzzy_matcher.py
philoch_bib_sdk/procedures/: fuzzy_matching.py  import_to_api.py
philoch_bib_sdk/rust_scorer/.cargo/: config.toml
scripts/: import_ods_to_api.py
tests/: shared.py
tests/adapters/: test_read_jvn_index_from_ods.py
tests/converters/plaintext/: conftest.py  test_author_formatter.py  test_author_parser.py  test_bibitem_formatter.py  test_bibitem_parser.py  test_bibkey_formatter.py  test_bibkey_parser.py  test_journal_formatter.py  test_page_formatter.py
tests/data/: test_import.csv
tests/logic/: test_default_models.py  test_models.py  test_setup.py
tests/logic/functions/: test_fuzzy_matcher.py  test_journal_article_matcher.py
