[project]
name = "philoch-bib-sdk"
version = "0.5.0"
description = "Standard development kit for the Philosophie Bibliography project"
authors = [
    {name = "Luis Alejandro Bordo García", email = "luis.bordo@philosophie.ch"}
]
maintainers = [
    {name = "Luis Alejandro Bordo García", email = "tech@philosophie.ch"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aletk>=0.1.8",
    "attrs>=25.3.0",
    "polars>=1.32.3",
    "pydantic>=2.11.9",
    "httpx>=0.28.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
aletk = "^0.1.6"
attrs = "^25.3.0"
polars = "^1.32.3"
pydantic = "^2.11.9"
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"
black = {extras = ["jupyter"], version = "^25.1.0"}
jupyter = "^1.1.1"
pytest-env = "^1.1.5"
autoflake = "^2.3.1"
odswriter = "^0.4.0"
fastexcel = "^0.14.0"
cytoolz = "^1.1.0"

[tool.mypy]
python_version = "3.13"
strict = true
explicit_package_bases = true
warn_unreachable = true
disallow_any_explicit = true
disallow_any_unimported = true
disallow_any_decorated = true
enable_error_code = [
    "possibly-undefined",
    "redundant-expr",
    "truthy-bool",
    "truthy-iterable",
    "exhaustive-match",
]
mypy_path = "."
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -s -m 'not external and not experimental'"
markers = [
    "external: mark tests that require external API calls",
    "experimental: mark tests that are experiments or benchmarks and shouldn't be run all the time",
]
testpaths = ["tests"]
pythonpath = ["."]
env = [
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = [
    "odswriter",
    "cytoolz",
]
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
skip-string-normalization = true
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/foo.py    # exclude a file named foo.py in the root of the project
  | .*_pb2.py  # exclude autogenerated Protocol Buffer files anywhere in the project
)
'''

[tool.poetry.scripts]
format = "scripts.format:main"
